--- a/gitlab-up.yml
+++ b/gitlab-up.yml
@@ -9,11 +9,11 @@
         module: digital_ocean
         state: present
         command: droplet
-        name: docker-2
+        name: gitlab
         size_id: 64
         region_id: 4
         image_id: 4970653
-        ssh_key_ids: 188399
+        ssh_key_ids: 34571
         wait: yes
       register: my_droplet
     - debug: msg="IP is {{ my_droplet.droplet.ip_address }}"
@@ -21,7 +21,7 @@
       local_action:
         module: dnsimple
         domain: attackzebras.com
-        record: docker-2
+        record: gitlab
         type: A
         value: "{{ my_droplet.droplet.ip_address }}"
         state: present
