--- a/roles/docker_python/tasks/main.yml
+++ b/roles/docker_python/tasks/main.yml
@@ -11,3 +11,5 @@
   pip: name="docker-py"
 - name: Install pycrypto
   pip: name="pycrypto"
+- name: Install python mysql
+  apt: pkg=python-mysqldb
